--- a/templates/user/makeuser.html.twig
+++ b/templates/user/makeuser.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
     <div class="row">
-        {{ form_start(form, {'action' : path('register')}) }}
+        {{ form_start(form, {'action' : path('user_create')}) }}
             {{ form_widget(form) }}
 
             <button type="submit" class="btn btn-success pull-right">Ajouter</button>
