--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,6 +39,10 @@
         <div class="container">
             <div class="row">
                 <a href="{{ path('user_create') }}" class="btn btn-primary">Créer un utilisateur</a>
+                {% if is_granted('ROLE_ADMIN') %}
+                <a href="{{ path('user_list') }}" class="btn btn-primary">Listes de l'utilisateur</a>
+                {% endif %}
+
 
                 {% if app.user %}
                 <a href="{{ path('app_logout') }}" class="pull-right btn btn-danger">Se déconnecter</a>
