--- a/templates/task/listtask.html.twig
+++ b/templates/task/listtask.html.twig
@@ -47,10 +47,13 @@
                     <form action="{{ path('task_edit', {'id' : task.id }) }}">
                         <button class="btn btn-danger btn-sm pull-right">Editer</button>
                     </form>
+                    {% endif %}
+
+                    {% if is_granted('ROLE_ADMIN') or (app.user and app.user == task.user) %}
                     <form action="{{ path('task_delete', {'id' : task.id }) }}">
                         <button class="btn btn-danger btn-sm pull-right">Supprimer</button>
                     </form>
-                    {% endif %}
+                {% endif %}
                 </div>
             </div>
         </div>
